manifests/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keithbartholomew
  namespace: keithbartholomew
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: keithbartholomew
        role: frontend
    spec:
      containers:
        - name: keithbartholomew
          image: quay.io/ktbartholomew/keithbartholomew.com:latest
          ports:
            - containerPort: 80
