manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keithbartholomew
  namespace: keithbartholomew
  labels:
    app: keithbartholomew
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: keithbartholomew
    role: frontend
