manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keithbartholomew
  namespace: keithbartholomew
  labels:
    app: keithbartholomew
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: keithbartholomew-tls
    hosts:
    - keithbartholomew.com
  rules:
  - host: keithbartholomew.com
    http:
      paths:
      - backend:
          serviceName: keithbartholomew
          servicePort: 80
